--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,25 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">
+      <img src="assets/favicon.png">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="nav navbar-nav">
+      <!--ul class="nav navbar-nav">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Item1-Izq</a>
         </li>
-      </ul>
+      </ul-->
       <ul class="nav navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Item2-Der</a>
+          <a class="nav-link" href="#">Inicia sesión</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Item3-Der</a>
+          <a class="nav-link" href="#">Regístrate</a>
         </li>
-        <li class="nav-item dropdown">
+        <!--li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Item4-Dropdown-Der
           </a>
@@ -26,10 +28,12 @@
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
-        </li>
+        </li-->
       </ul>
     </div>
   </div>
 </nav>
+
+<app-landing-page></app-landing-page>
 
 <router-outlet></router-outlet>
