--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,27 +1,16 @@
-<div class="container-fluid" style="background-color: #385b66;">
+<div class="container-fluid" style="background-color: #385b66">
   <div class="row">
     <div class="col">
-      <img src="assets/logo.png" width="100%">
+      <img src="assets/logo.png" width="100%" />
     </div>
     <div class="col">
-      <div class="card text-center">
-        <div class="card-header">
-          <ul class="nav nav-tabs card-header-tabs">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="true" href="#">Inicia sesión</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="d-flex align-items-center justify-content-center" style="min-height: 100vh; display: flex; align-items: center">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title text-center">La solución a todos tus problemas académicos.</h4>
+            <p clas="card-text">Si se acerca un parcial y te sientes desubicado, un taller te está sacando de quicio, o alguna materia se te está complicando, estás en el sitio indicado.</p>
+            <app-estudiante-login></app-estudiante-login>
+          </div>
         </div>
       </div>
     </div>
