--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Monitores</a>
+          <a class="nav-link" routerLink="/monitores">Monitores</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Material de estudio</a>
@@ -49,7 +49,5 @@
     </div>
   </div>
 </nav>
-
-<app-landing-page></app-landing-page>
 
 <router-outlet></router-outlet>
